fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -17,15 +17,15 @@
   width: 6px;
 }
 *::-webkit-scrollbar-thumb {
-  background-color: #2f3542;
+  background-color: grey;
   border-radius: 10px;
   background-clip: padding-box;
   border: 2px solid transparent;
 }
 *::-webkit-scrollbar-track {
-  background-color: grey;
+  background-color: #2f3542;
   border-radius: 5px;
-  box-shadow: inset 0px 0px 3px white;
+  box-shadow: inset -1px -1px 3px white;
 }
 
 input,
